# icfpc2025

./: LICENSE  README.md
docs/: rules_lightning.md
k3/: .gitignore  k3.sln
k3/scripts/: solver.py  solver_cpsat.py
k3/vs/solver/: solver.vcxproj  solver.vcxproj.filters
minotaur/: .gitignore  README.md  api_routes.py  api_select.py  app.py  auth.py  config.py  context.py  db.py  eventbus.py  fairshare.py  logging.py  main.py  priority_routes.py  proxy.py  pyproject.toml  rebooter.py  run.py  sched_fair.py  scheduler.py  solver.py  ui_routes.py
minotaur/static/js/: admin.js  core.js  init.js  priorities.js  status.js
minotaur/templates/: _task_card.html  analytics.html  base.html  index.html  pane_admin.html  pane_analytics.html  pane_queued.html  pane_recent.html  pane_running.html  pane_scheduler.html  priority_pane.html  settings_form.html  status.html
minotaur/tests/: test_fairshare.py  test_ui_endpoints.py
minotaur/ui/: __init__.py  admin_db.py  admin_sys.py  admin_threads.py  analytics.py  events.py  helpers.py  panes.py  settings.py
scripts/: ctree.md  ctree.py  local_judge_server.html  local_judge_server.py  lstar.py  lstar2.py  lstar_loop.py  lstar_optuna.py  lstar_random_walk_optuna.py  lstar_random_walks.py  lstar_random_walks_optuna.py  lstar_rs_decompose.py  lstar_rs_decompose_oputuna.py  lstart.py  peria.py  register.json  register.sh  runner.py  runner_dummy.py  select.py  solver_cpsat2.py
scripts/leaderboard/: leaderboard.py  pyproject.toml
scripts/leaderboard/scores/: 20250908_002141.csv  20250908_002457.csv  20250908_005406.csv  (+110 more)
(+3 files in other folders)
