[project]
name = "minotaur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3",
    "requests>=2.31",
    "PyYAML>=6.0",
    "waitress>=3.0.2",
    "pytest>=8.4.2",
    "psutil>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
